--- a/reseach/data_ingestion.ipynb
+++ b/reseach/data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "54318cdc",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e81b663e",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'C:\\\\Users\\\\sunil kumar\\\\OneDrive - AlgoDox Technology PVT LTD\\\\Desktop\\\\dl_ops_champios\\\\vinipro'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "181cf825",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "86f26cc8",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "041eca87",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "189e1e2b",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "f9c48d47",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8a1a9d9d",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "548aa8e5",
    "metadata": {},
    "outputs": [
@@ -187,13 +187,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ YAML Content: {'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 'https://github.com/SunilBajiya/ml_ops_champion/raw/main/Chicken-fecal-images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}}\n",
-      "[2025-08-07 14:57:40,550: INFO: common: YAML file config\\config.yaml loaded successfully]\n",
+      "✅ YAML Content: {'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 'https://github.com/entbappy/Branching-tutorial/raw/master/Chicken-fecal-images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'prepare_callbacks': {'root_dir': 'artifacts/prepare_callbacks', 'tensorboard_root_log_dir': 'artifacts/prepare_callbacks/tensorboard_log_dir', 'checkpoint_model_filepath': 'artifacts/prepare_callbacks/checkpoint_dir/model.h5'}}\n",
+      "[2025-08-28 17:04:49,133: INFO: common: YAML file config\\config.yaml loaded successfully]\n",
       "✅ YAML Content: {'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 16, 'INCLUDE_TOP': False, 'EPOCHS': 1, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.01}\n",
-      "[2025-08-07 14:57:40,556: INFO: common: YAML file params.yaml loaded successfully]\n",
-      "[2025-08-07 14:57:40,559: INFO: common: created directory at: artifacts]\n",
-      "[2025-08-07 14:57:40,561: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-08-07 14:57:40,563: INFO: 3399376260: File already exists of size: ~ 11345 KB]\n"
+      "[2025-08-28 17:04:49,139: INFO: common: YAML file params.yaml loaded successfully]\n",
+      "[2025-08-28 17:04:49,141: INFO: common: created directory at: artifacts]\n",
+      "[2025-08-28 17:04:49,144: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-08-28 17:04:49,149: INFO: 1951570136: File already exists of size: ~ 11345 KB]\n"
      ]
     }
    ],
